--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "next": "14.0.0",
+    "openai": "^4.12.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "openai": "^4.12.0"
+    "react-dom": "18.2.0"
   }
 }
